# ccxt-rust

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  codecov.yml  justfile  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  exchange_request.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  npm-publish.yml  release.yml
.serena/: project.yml
benches/: exchange_benchmarks.rs  parsing_benchmarks.rs
claudedocs/: WASM_ARCHITECTURE_PLAN.md  WASM_ROADMAP.md  bitvavo_ws_implementation.md  coinone_ws_implementation.md  dex_architecture_design.md  hollaex_ws_implementation.md  independentreserve_ws_implementation.md  p2b_ws_implementation.md  whitebit_ws_implementation.md
docs/: ARCHITECTURE.md  BITFINEX_WS_IMPLEMENTATION.md  CCXT_RUST_GAP_ANALYSIS.md  COMPARISON_ANALYSIS.md  COSMOS_SDK_REFACTORING.md  DIGIFINEX_INTEGRATION.md  HITBTC_WEBSOCKET_IMPLEMENTATION.md  HYPERLIQUID_WS_IMPLEMENTATION.md  HYPERLIQUID_WS_QUICKSTART.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_ROADMAP.md  MIGRATION_FROM_CCXT_JS.md  PERFORMANCE.md  PORTING_STATUS.md  TESTING.md  TROUBLESHOOTING.md  WASM_GUIDE.md  WEBSOCKET_GUIDE.md  exchanges.md
examples/: README.md  advanced_config.rs  backpack_example.rs  backpack_ws_example.rs  basic_usage.rs  bullish_ws_example.rs  coinone_ws_example.rs  dex_trading.rs  error_handling.rs  exmo_ws_example.rs  hashkey_ws_example.rs  hitbtc_ws_example.rs  hollaex_ws_example.rs  hyperliquid_ws_example.rs  independentreserve_ws_example.rs  krakenfutures_ws_example.rs  kucoinfutures_ws_example.rs  multi_exchange.rs  onetrading_ws_example.rs  toobit_example.rs  toobit_ws_example.rs  trading_operations.rs  wasm_demo.html  websocket_streaming.rs
proto/: exchange.proto
src/: errors.rs  lib.rs  macros.rs  wasm.rs
src/client/: cache.rs  config.rs  http.rs  http_wasm.rs  mod.rs  rate_limiter.rs  websocket.rs  websocket_wasm.rs
src/crypto/: mod.rs
src/crypto/common/: jwt.rs  mod.rs  rsa.rs  totp.rs  traits.rs
src/crypto/cosmos/: address.rs  keys.rs  mod.rs  protobuf.rs  signer.rs  transaction.rs  wallet.rs
src/crypto/evm/: eip712.rs  keccak.rs  mod.rs  secp256k1.rs  wallet.rs
src/crypto/starknet/: account.rs  curve.rs  mod.rs  paradex.rs  poseidon.rs  typed_data.rs  wallet.rs
src/exchanges/: mod.rs
src/exchanges/cex/: alpaca.rs  alpaca_ws.rs  ascendex.rs  ascendex_ws.rs  backpack.rs  backpack_ws.rs  bequant.rs  bequant_ws.rs  bigone.rs  bigone_ws.rs  binance.rs  binance_futures.rs  binance_futures_ws.rs  binance_ws.rs  binancecoinm.rs  binancecoinm_ws.rs  binanceus.rs  binanceus_ws.rs  binanceusdm.rs  binanceusdm_ws.rs  bingx.rs  bingx_ws.rs  bit2c.rs  bit2c_ws.rs  bitbank.rs  bitbank_ws.rs  bitbns.rs  bitbns_ws.rs  bitfinex.rs  bitfinex_ws.rs  bitflyer.rs  bitflyer_ws.rs  bitget.rs  bitget_ws.rs  bithumb.rs  bithumb_ws.rs  bitmart.rs  bitmart_ws.rs  bitmex.rs  bitmex_ws.rs  (+162 more)
src/exchanges/dex/: apex.rs  apex_ws.rs  defx.rs  defx_ws.rs  derive.rs  derive_ws.rs  dydx.rs  dydx_ws.rs  dydxv4.rs  dydxv4_order.rs  dydxv4_ws.rs  hyperliquid.rs  hyperliquid_ws.rs  mod.rs  paradex.rs  paradex_ws.rs  wavesexchange.rs  wavesexchange_ws.rs
src/exchanges/foreign/: alpaca.rs  alpaca_ws.rs  ascendex.rs  ascendex_ws.rs  backpack.rs  backpack_ws.rs  bequant.rs  bequant_ws.rs  bigone.rs  binance_futures.rs  binance_futures_ws.rs  binance_ws.rs  binancecoinm.rs  binancecoinm_ws.rs  binanceus.rs  binanceus_ws.rs  binanceusdm.rs  binanceusdm_ws.rs  bingx_ws.rs  bit2c.rs  bitbank_ws.rs  bitbns.rs  bitfinex.rs  bitfinex_ws.rs  bitflyer_ws.rs  bitget.rs  bitget_ws.rs  bithumb.rs  bithumb_ws.rs  bitmart.rs  bitmart_ws.rs  bitmex_ws.rs  bitrue_ws.rs  bitstamp.rs  bitstamp_ws.rs  blockchaincom.rs  blockchaincom_ws.rs  blofin.rs  blofin_ws.rs  btcalpha.rs  (+106 more)
src/exchanges/korean/: bithumb_ws.rs  coinone.rs  coinone_ws.rs  korbit_ws.rs  mod.rs  upbit_ws.rs
src/grpc/: mod.rs  server.rs  service.rs
src/types/: account.rs  balance.rs  convert.rs  currency.rs  derivatives.rs  exchange.rs  fee.rs  funding.rs  leverage.rs  liquidation.rs  margin.rs  market.rs  mod.rs  ohlcv.rs  open_interest.rs  order.rs  orderbook.rs  position.rs  ticker.rs  trade.rs  transaction.rs  ws_exchange.rs
src/types/traits/: account.rs  base.rs  convert.rs  derivatives.rs  margin.rs  mod.rs  options.rs  public_market.rs  spot_trading.rs
src/utils/: crypto.rs  mod.rs  parse.rs  precise.rs  precision.rs  safe.rs  time.rs
src/wasm/: config.rs  mod.rs  types.rs  utils.rs
src/wasm/exchanges/: binance.rs  bybit.rs  kraken.rs  mod.rs  okx.rs  upbit.rs
src/wasm/websocket/: mod.rs
tests/: dex_tests.rs  error_handling_tests.rs  exchange_trait_tests.rs  live_api_tests.rs  live_dex_tests.rs  major_cex_tests.rs  type_system_tests.rs  websocket_tests.rs
