[package]
name = "ccxt-rust"
version = "0.1.0"
edition = "2021"
description = "CCXT cryptocurrency exchange library ported to Rust"
license = "MIT"

[dependencies]
# 내부 의존성
shared-types = { path = "../shared-types" }

# 비동기 런타임
tokio = { version = "1.0", features = ["full"] }

# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack (Hyperliquid action serialization)

# 시간
chrono = { version = "0.4", features = ["serde"] }

# 숫자
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
num-bigint = "0.4"
num-traits = "0.2"

# 에러 처리
thiserror = "1.0"
anyhow = "1.0"

# 암호화 (API 서명)
hmac = "0.12"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"

# DEX 암호화 (EVM/StarkNet/Cosmos)
sha3 = "0.10"                                    # Keccak256
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }  # secp256k1 ECDSA
elliptic-curve = { version = "0.13", features = ["sec1"] }       # EC 공통
starknet-crypto = "0.7"                         # Poseidon hash, Pedersen, ECDSA for StarkNet
starknet-types-core = "0.1"                     # FieldElement types

# Cosmos SDK 암호화
bip39 = "2.0"                                   # BIP-39 mnemonic (12/24 words)
bip32 = "0.5"                                   # BIP-32/44 HD key derivation
bech32 = "0.11"                                 # Bech32 address encoding (Cosmos)
ripemd = "0.1"                                  # RIPEMD-160 (Cosmos address)
prost = "0.13"                                  # Protobuf encoding (Cosmos SDK messages)

# 비동기 trait
async-trait = "0.1"

# 로깅
tracing = "0.1"

# URL 인코딩
urlencoding = "2.1"

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.33"
wiremock = "0.6"
