[package]
name = "ccxt-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["onlyhyde"]
description = "CCXT cryptocurrency exchange library ported to Rust - unified API for 100+ crypto exchanges"
license = "MIT"
repository = "https://github.com/onlyhyde/trading"
homepage = "https://github.com/onlyhyde/trading/tree/main/ccxt-rust"
documentation = "https://docs.rs/ccxt-rust"
readme = "README.md"
keywords = ["cryptocurrency", "exchange", "trading", "api", "websocket"]
categories = ["api-bindings", "asynchronous", "web-programming"]
include = [
    "src/**/*",
    "proto/**/*",
    "examples/**/*",
    "benches/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[features]
default = ["cex"]
# CEX (Centralized Exchange) support - Binance, OKX, Bybit, etc.
cex = []
# DEX (Decentralized Exchange) support - Hyperliquid, dYdX v4, Paradex, etc.
# Includes crypto primitives for EVM, StarkNet, and Cosmos chains
dex = [
    "dep:sha3",
    "dep:k256",
    "dep:elliptic-curve",
    "dep:starknet-crypto",
    "dep:starknet-types-core",
    "dep:bip39",
    "dep:bip32",
    "dep:bech32",
    "dep:ripemd",
    "dep:prost",
]
# Advanced cryptography - ECDSA (secp256k1) and Ed25519 signatures
advanced-crypto = [
    "dep:k256",
    "dep:elliptic-curve",
    "dep:ed25519-dalek",
    "dep:signature",
]
# gRPC server support for external service integration
grpc = [
    "dep:tonic",
    "dep:prost",
    "dep:tonic-reflection",
    "dep:tracing-subscriber",
]
# All features enabled
full = ["cex", "dex", "advanced-crypto", "grpc"]

[dependencies]
# 비동기 런타임
tokio = { version = "1.0", features = ["full"] }

# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack (Hyperliquid action serialization)

# 시간
chrono = { version = "0.4", features = ["serde"] }

# 숫자
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
num-bigint = "0.4"
num-traits = "0.2"

# 에러 처리
thiserror = "1.0"
anyhow = "1.0"

# 암호화 (API 서명)
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"  # SHA1 for TOTP
md5 = "0.7"
hex = "0.4"
crc32fast = "1.4"  # CRC32 checksum for orderbook validation
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"
rsa = { version = "0.9", features = ["sha2"] }  # RSA signing

# DEX 암호화 (EVM/StarkNet/Cosmos) - optional, enabled by "dex" feature
sha3 = { version = "0.10", optional = true }                                    # Keccak256
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"], optional = true }  # secp256k1 ECDSA
elliptic-curve = { version = "0.13", features = ["sec1"], optional = true }       # EC 공통
starknet-crypto = { version = "0.7", optional = true }                         # Poseidon hash, Pedersen, ECDSA for StarkNet
starknet-types-core = { version = "0.1", optional = true }                     # FieldElement types

# Cosmos SDK 암호화 - optional, enabled by "dex" feature
bip39 = { version = "2.0", optional = true }                                   # BIP-39 mnemonic (12/24 words)
bip32 = { version = "0.5", optional = true }                                   # BIP-32/44 HD key derivation
bech32 = { version = "0.11", optional = true }                                 # Bech32 address encoding (Cosmos)
ripemd = { version = "0.1", optional = true }                                  # RIPEMD-160 (Cosmos address)
prost = { version = "0.13", optional = true }                                  # Protobuf encoding (Cosmos SDK messages, gRPC)

# gRPC 서버 - optional, enabled by "grpc" feature
tonic = { version = "0.12", optional = true }                                  # gRPC server/client
tonic-reflection = { version = "0.12", optional = true }                       # gRPC reflection service
tracing-subscriber = { version = "0.3", optional = true }                      # Logging subscriber for gRPC server

# ECDSA/Ed25519 서명 - CEX 인증용
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }  # Ed25519 signatures
signature = { version = "2.2", optional = true }                               # Signature traits

# 비동기 trait
async-trait = "0.1"

# Enum derive macros
strum = { version = "0.26", features = ["derive"] }

# 로깅
tracing = "0.1"

# URL 인코딩
urlencoding = "2.1"

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.33"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "exchange_benchmarks"
harness = false
required-features = ["cex"]

[[bench]]
name = "parsing_benchmarks"
harness = false

# DEX examples require "dex" feature
[[example]]
name = "dex_trading"
required-features = ["dex"]

[[example]]
name = "hyperliquid_ws_example"
required-features = ["dex"]

# CEX examples require "cex" feature
[[example]]
name = "trading_operations"
required-features = ["cex"]

[[example]]
name = "basic_usage"
required-features = ["cex"]

[[example]]
name = "multi_exchange"
required-features = ["cex"]

[[example]]
name = "websocket_streaming"
required-features = ["cex"]

[[example]]
name = "backpack_example"
required-features = ["cex"]

[[example]]
name = "backpack_ws_example"
required-features = ["cex"]

[[example]]
name = "bullish_ws_example"
required-features = ["cex"]

[[example]]
name = "coinone_ws_example"
required-features = ["cex"]

[[example]]
name = "exmo_ws_example"
required-features = ["cex"]

[[example]]
name = "hashkey_ws_example"
required-features = ["cex"]

[[example]]
name = "hitbtc_ws_example"
required-features = ["cex"]

[[example]]
name = "hollaex_ws_example"
required-features = ["cex"]

[[example]]
name = "independentreserve_ws_example"
required-features = ["cex"]

[[example]]
name = "krakenfutures_ws_example"
required-features = ["cex"]

[[example]]
name = "kucoinfutures_ws_example"
required-features = ["cex"]

[[example]]
name = "onetrading_ws_example"
required-features = ["cex"]

[[example]]
name = "toobit_example"
required-features = ["cex"]

[[example]]
name = "toobit_ws_example"
required-features = ["cex"]

# gRPC server binary
[[bin]]
name = "ccxt-grpc-server"
path = "src/grpc/server.rs"
required-features = ["grpc", "cex"]
